# moplots

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
moplots/: __init__.py  cli.py
