[tool.poetry]
name = "moplots"
version = "0.1.0"
description = "Molecular Orbital Plots as Batch Series for ORCA"
authors = ["Anselm Hahn <anselm.hahn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.5.3"
rich-argparse = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Enable the `--check` flag by default.
[tool.poetry.scripts]
moplots = "moplots.cli:main"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
extend-ignore = ["FA100", "ANN101"]
fix = true
src = ["moplots"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7 as the default target version for HPC clusters.
target-version = "py37"

# Set doc string style to Google.
[tool.ruff.pydocstyle]
convention = "google"
